{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 1408,
  "lineage": "2f246eed-5de7-1dfd-107f-7a5876c15e41",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Webserver01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a88743759c81c37e",
            "arn": "arn:aws:ec2:eu-central-1:771355239277:instance/i-042c8149802b614aa",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-042c8149802b614aa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "acceskey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0aebb3d408bc12750",
            "private_dns": "ip-192-168-2-219.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.2.219",
            "public_ip": "3.70.222.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-005e96a3d9d7e0847",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00c9cc3ad41f43337",
            "tags": {
              "Name": "Web01"
            },
            "tags_all": {
              "Name": "Web01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0458e7475cc11fbfd",
              "sg-0ac57e1d09a74ad7a"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.database",
            "aws_db_subnet_group.db-subnet",
            "aws_key_pair.acceskey",
            "aws_security_group.Database-SG",
            "aws_security_group.SSH-Acces",
            "aws_security_group.WebSG",
            "aws_security_group.loadbalancerSG",
            "aws_subnet.Subnet_Web01",
            "aws_subnet.Subnet_Web02",
            "aws_vpc.Innovatech-VPC",
            "data.aws_ami.amznl2",
            "tls_private_key.acceskey"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a88743759c81c37e",
            "arn": "arn:aws:ec2:eu-central-1:771355239277:instance/i-0d73840d1e87ea32d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d73840d1e87ea32d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "acceskey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-099499cdf5024d8f6",
            "private_dns": "ip-192-168-3-6.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.3.6",
            "public_ip": "52.29.205.204",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-025bb81dec0abf085",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0791b69a16962ddf0",
            "tags": {
              "Name": "Web02"
            },
            "tags_all": {
              "Name": "Web02"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0458e7475cc11fbfd",
              "sg-0ac57e1d09a74ad7a"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.database",
            "aws_db_subnet_group.db-subnet",
            "aws_key_pair.acceskey",
            "aws_security_group.Database-SG",
            "aws_security_group.SSH-Acces",
            "aws_security_group.WebSG",
            "aws_security_group.loadbalancerSG",
            "aws_subnet.Subnet_Web01",
            "aws_subnet.Subnet_Web02",
            "aws_vpc.Innovatech-VPC",
            "data.aws_ami.amznl2",
            "tls_private_key.acceskey"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Innovatech-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:771355239277:internet-gateway/igw-06bf2c3583198d675",
            "id": "igw-06bf2c3583198d675",
            "owner_id": "771355239277",
            "vpc_id": "vpc-085fb43645452d106"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.Innovatech-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:771355239277:loadbalancer/app/Loadbalancer/c64139fa08d8b7cc",
            "arn_suffix": "app/Loadbalancer/c64139fa08d8b7cc",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "Loadbalancer-1865587244.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:771355239277:loadbalancer/app/Loadbalancer/c64139fa08d8b7cc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Loadbalancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-088db25c5eaded8ff"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00c9cc3ad41f43337"
              },
              {
                "subnet_id": "subnet-0791b69a16962ddf0"
              }
            ],
            "subnets": [
              "subnet-00c9cc3ad41f43337",
              "subnet-0791b69a16962ddf0"
            ],
            "vpc_id": "vpc-085fb43645452d106",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.loadbalancerSG",
            "aws_subnet.Subnet_Web01",
            "aws_subnet.Subnet_Web02",
            "aws_vpc.Innovatech-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:771355239277:listener/app/Loadbalancer/c64139fa08d8b7cc/9c035fbc1a18c8b8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:771355239277:targetgroup/LoadbalancerTG/e4a9e65a682937cd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:771355239277:listener/app/Loadbalancer/c64139fa08d8b7cc/9c035fbc1a18c8b8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:771355239277:loadbalancer/app/Loadbalancer/c64139fa08d8b7cc",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.loadbalancer",
            "aws_lb_target_group.LoadbalancerTG",
            "aws_security_group.loadbalancerSG",
            "aws_subnet.Subnet_Web01",
            "aws_subnet.Subnet_Web02",
            "aws_vpc.Innovatech-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "LoadbalancerTG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:771355239277:targetgroup/LoadbalancerTG/e4a9e65a682937cd",
            "arn_suffix": "targetgroup/LoadbalancerTG/e4a9e65a682937cd",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:771355239277:targetgroup/LoadbalancerTG/e4a9e65a682937cd",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "LoadbalancerTG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-085fb43645452d106"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.Innovatech-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "Web01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:771355239277:targetgroup/LoadbalancerTG/e4a9e65a682937cd-20250925134235456400000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:771355239277:targetgroup/LoadbalancerTG/e4a9e65a682937cd",
            "target_id": "i-042c8149802b614aa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.database",
            "aws_db_subnet_group.db-subnet",
            "aws_instance.Webserver01",
            "aws_key_pair.acceskey",
            "aws_lb_target_group.LoadbalancerTG",
            "aws_security_group.Database-SG",
            "aws_security_group.SSH-Acces",
            "aws_security_group.WebSG",
            "aws_security_group.loadbalancerSG",
            "aws_subnet.Subnet_Web01",
            "aws_subnet.Subnet_Web02",
            "aws_vpc.Innovatech-VPC",
            "data.aws_ami.amznl2",
            "tls_private_key.acceskey"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "Web02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:771355239277:targetgroup/LoadbalancerTG/e4a9e65a682937cd-20250925134235491000000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:771355239277:targetgroup/LoadbalancerTG/e4a9e65a682937cd",
            "target_id": "i-0d73840d1e87ea32d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.database",
            "aws_db_subnet_group.db-subnet",
            "aws_instance.webserver02",
            "aws_key_pair.acceskey",
            "aws_lb_target_group.LoadbalancerTG",
            "aws_security_group.Database-SG",
            "aws_security_group.SSH-Acces",
            "aws_security_group.WebSG",
            "aws_security_group.loadbalancerSG",
            "aws_subnet.Subnet_Web01",
            "aws_subnet.Subnet_Web02",
            "aws_vpc.Innovatech-VPC",
            "data.aws_ami.amznl2",
            "tls_private_key.acceskey"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:771355239277:route-table/rtb-07a5c1d9510cbb073",
            "id": "rtb-07a5c1d9510cbb073",
            "owner_id": "771355239277",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06bf2c3583198d675",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-085fb43645452d106"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.Innovatech-igw",
            "aws_vpc.Innovatech-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f84b5e9f13a831c8",
            "route_table_id": "rtb-07a5c1d9510cbb073",
            "subnet_id": "subnet-00c9cc3ad41f43337"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.Innovatech-igw",
            "aws_route_table.public-rt",
            "aws_subnet.Subnet_Web01",
            "aws_vpc.Innovatech-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07de0648eb2ff612b",
            "route_table_id": "rtb-07a5c1d9510cbb073",
            "subnet_id": "subnet-0791b69a16962ddf0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.Innovatech-igw",
            "aws_route_table.public-rt",
            "aws_subnet.Subnet_Web02",
            "aws_vpc.Innovatech-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Database-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:771355239277:security-group/sg-0f0d8fd7f2b5707ba",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f0d8fd7f2b5707ba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20250925133806880100000001",
            "name_prefix": "terraform-",
            "owner_id": "771355239277",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-085fb43645452d106"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.Innovatech-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SSH-Acces",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:771355239277:security-group/sg-0458e7475cc11fbfd",
            "description": "Allow connection on port 22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0458e7475cc11fbfd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Allow-SSH",
            "name_prefix": "",
            "owner_id": "771355239277",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "AllowSSHSG"
            },
            "tags_all": {
              "Name": "AllowSSHSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-085fb43645452d106"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.Innovatech-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "WebSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:771355239277:security-group/sg-0ac57e1d09a74ad7a",
            "description": "Allow HTTP from loadbalancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ac57e1d09a74ad7a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-088db25c5eaded8ff"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "WebSG",
            "name_prefix": "",
            "owner_id": "771355239277",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-085fb43645452d106"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.loadbalancerSG",
            "aws_vpc.Innovatech-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "loadbalancerSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:771355239277:security-group/sg-088db25c5eaded8ff",
            "description": "Allow HTTP from internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-088db25c5eaded8ff",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "loadbalancerSG",
            "name_prefix": "",
            "owner_id": "771355239277",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-085fb43645452d106"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.Innovatech-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet_Web01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:771355239277:subnet/subnet-00c9cc3ad41f43337",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c9cc3ad41f43337",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "771355239277",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subent_Web01"
            },
            "tags_all": {
              "Name": "Subent_Web01"
            },
            "vpc_id": "vpc-085fb43645452d106"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.Innovatech-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet_Web02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:771355239277:subnet/subnet-0791b69a16962ddf0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0791b69a16962ddf0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "771355239277",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subent_Web02"
            },
            "tags_all": {
              "Name": "Subent_Web02"
            },
            "vpc_id": "vpc-085fb43645452d106"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.Innovatech-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Innovatech-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:771355239277:vpc/vpc-085fb43645452d106",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0c6cd0e7895e1afd3",
            "default_route_table_id": "rtb-08c0ac7f958de713f",
            "default_security_group_id": "sg-00c12629ba1c769c8",
            "dhcp_options_id": "dopt-04541e6a5852f0bfc",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-085fb43645452d106",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08c0ac7f958de713f",
            "owner_id": "771355239277",
            "tags": {
              "Name": "Innovatech-VPC"
            },
            "tags_all": {
              "Name": "Innovatech-VPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}